Final bugfixes
